Update registrar venta bien

--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -60,7 +60,7 @@
         console.error(error);
       } else {
         alert('Cliente creado exitosamente.');
-        window.location.href = 'registrar_ventas.html';
+        window.location.href = 'registrar_venta.html';
       }
     }
   </script>
