--- a/inventario.html
+++ b/inventario.html
@@ -81,7 +81,7 @@
     (async () => {
       document.getElementById("header").innerHTML = await fetch('header.html').then(r => r.text());
       document.getElementById("footer").innerHTML = await fetch('footer.html').then(r => r.text());
-      // No cargamos inventario al inicio
+      cargarInventario(); // 🚀 ¡Cargamos inventario al inicio!
     })();
 
     async function cargarInventario() {
