--- a/modificar.html
+++ b/modificar.html
@@ -10,7 +10,6 @@
 <body>
   <div id="header"></div>
 
-  <!-- Filtros de búsqueda -->
   <div id="filtros-container">
     <input list="codigos" type="text" id="filtroCodigo" placeholder="🔍 Código">
     <datalist id="codigos"></datalist>
@@ -47,45 +46,43 @@
     })();
 
     async function cargarInventario() {
-      const { data, error } = await supabase.from('INVENTARIO').select('*');
+      const { data: dataCompleta, error } = await supabase.from('INVENTARIO').select('*');
       if (error) return alert('Error al cargar inventario');
 
-      llenarDatalists(data);
+      llenarDatalists(dataCompleta);
 
       const codigo = document.getElementById('filtroCodigo').value.trim().toLowerCase();
       const nombre = document.getElementById('filtroNombre').value.trim().toLowerCase();
       const marca = document.getElementById('filtroMarca').value.trim().toLowerCase();
-      const talla = document.getElementById('filtroTalla').value.trim();
+      const tallaFiltro = document.getElementById('filtroTalla').value.trim();
       const disponibleFiltro = document.getElementById('filtroDisponible').value;
 
-      let resultados = data;
-      if (codigo) resultados = resultados.filter(p => p.codigo.toLowerCase().includes(codigo));
-      if (nombre) resultados = resultados.filter(p => p.nombre.toLowerCase().includes(nombre));
-      if (marca) resultados = resultados.filter(p => p.marca.toLowerCase().includes(marca));
-      if (talla) resultados = resultados.filter(p => p.talla == talla);
+      let productosFiltrados = dataCompleta;
+      if (codigo) productosFiltrados = productosFiltrados.filter(p => p.codigo.toLowerCase().includes(codigo));
+      if (nombre) productosFiltrados = productosFiltrados.filter(p => p.nombre.toLowerCase().includes(nombre));
+      if (marca) productosFiltrados = productosFiltrados.filter(p => p.marca.toLowerCase().includes(marca));
+      if (tallaFiltro) productosFiltrados = productosFiltrados.filter(p => p.talla == tallaFiltro);
       if (disponibleFiltro === 'disponibles') {
-        resultados = resultados.filter(p => p.disponible > 0);
+        productosFiltrados = productosFiltrados.filter(p => p.disponible > 0);
       }
 
-      const agrupado = {};
-      resultados.forEach(item => {
-        if (!agrupado[item.codigo]) agrupado[item.codigo] = [];
-        agrupado[item.codigo].push(item);
-      });
-
+      const codigosUnicos = [...new Set(productosFiltrados.map(item => item.codigo))];
       const contenedor = document.getElementById('inventario-contenedor');
       contenedor.innerHTML = '';
 
-      if (resultados.length === 0) {
+      if (codigosUnicos.length === 0) {
         contenedor.innerHTML = '<p>No se encontraron productos con esos filtros.</p>';
         document.getElementById("contador-resultados").textContent = '';
         return;
       }
 
       document.getElementById("contador-resultados").textContent =
-        `Mostrando ${Object.keys(agrupado).length} productos distintos.`;
+        `Mostrando ${codigosUnicos.length} productos distintos.`;
 
-      for (const [codigo, items] of Object.entries(agrupado)) {
+      for (const codigoProducto of codigosUnicos) {
+        const items = dataCompleta.filter(p => p.codigo === codigoProducto);
+        if (items.length === 0) continue;
+
         const producto = items[0];
         const div = document.createElement('div');
         div.className = 'card';
@@ -167,7 +164,6 @@
       const nuevaImagenInput = card.querySelector('.nueva-imagen');
       let imagen_url = card.querySelector('.imagen_url').value;
 
-      // Validar datos básicos de cada fila
       const filas = card.querySelectorAll('tbody tr');
       for (let row of filas) {
         const talla = row.querySelector('.talla').value;
@@ -179,7 +175,6 @@
         }
       }
 
-      // Subir imagen a carpeta FOTOS2 si hay una nueva imagen
       if (nuevaImagenInput.files.length > 0) {
         const archivo = nuevaImagenInput.files[0];
         const nombreArchivo = `${Date.now()}-${archivo.name}`;
@@ -201,7 +196,6 @@
 
         imagen_url = urlData.publicUrl;
 
-        // Actualiza la imagen en todos los registros con mismo código, nombre, marca
         const { error: updateImagenError } = await supabase
           .from('INVENTARIO')
           .update({ imagen_url })
@@ -213,10 +207,8 @@
           alert('Error al actualizar imagen en todos los registros: ' + updateImagenError.message);
           return;
         }
-        console.log(`✅ Imagen actualizada en todos los registros con ${codigo} - ${nombre} - ${marca}`);
       }
 
-      // Actualizar talla, disponible y precio por fila
       for (let row of filas) {
         const id = row.getAttribute('data-id');
         const talla = row.querySelector('.talla').value;
